fixed thankyou msg alignment

--- a/blocks/forms/forms.css
+++ b/blocks/forms/forms.css
@@ -342,6 +342,7 @@ input[type="submit"] {
 
 /* show modal */
 .hubspot-form.show-label .hs-form .hs-form-field .hs-input {
+  width: 100%;
   background-color: #fff;
   background-image: none;
   border: none;
