--- a/blocks/share-story/share-story.css
+++ b/blocks/share-story/share-story.css
@@ -146,6 +146,12 @@ body.modal-open {
   color: var(--text-white);
 }
 
+/* submit your story form */
+.submit-story-modal .submit-story-modal-wrapper .submitted-message {
+  text-align: center;
+  padding: 30px 0;
+}
+
 @media only screen and (max-width: 991px) {
   .share-story {
     flex-direction: column;
